<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity_games">

    <ImageView
        android:id="@+id/wave_top_games"
        android:layout_width="489dp"
        android:layout_height="200dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/lvl_gamer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_game_page" />

    <ImageView
        android:id="@+id/img_container_photo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/finished_games_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wave_top_games"
        app:srcCompat="@drawable/show_email" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="42dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_container_photo_email"
        app:layout_constraintEnd_toEndOf="@+id/img_container_photo_email"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/nome_games"
        app:layout_constraintTop_toTopOf="@+id/img_container_photo_email"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_test_profile" />

    <TextView
        android:id="@+id/nome_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/name_test"
        android:textColor="@color/darkblue_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_games"
        app:layout_constraintEnd_toEndOf="@+id/img_container_photo_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_container_photo_email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/email_test"
        android:textColor="@color/darkblue_text"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_container_photo_email"
        app:layout_constraintEnd_toStartOf="@+id/image_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_container_photo_email"
        app:layout_constraintTop_toTopOf="@+id/img_container_photo_email"
        app:layout_constraintVertical_bias="0.739" />

    <TextView
        android:id="@+id/finished_games_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_finished"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/yellow_gamepage"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="@+id/img_container_photo_email"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/games_finished"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="@string/games_finished_n"
        android:textColor="@color/background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="@+id/finished_games_title"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finished_games_title"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/games_in_curse_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/games_currently"
        android:textColor="@color/yellow_gamepage"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="@+id/img_container_photo_email"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/finished_games_title"
        app:layout_constraintTop_toTopOf="@+id/wave_top_games"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/games_in_curse"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/games_currently_n"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="@+id/games_in_curse_title"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/games_finished"
        app:layout_constraintTop_toBottomOf="@+id/games_in_curse_title"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/age_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_test"
        android:textColor="@color/yellow_gamepage"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toEndOf="@+id/games_in_curse_title"
        app:layout_constraintTop_toTopOf="@+id/wave_top_games"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/age_text"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:text="@string/age_test_n"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wave_top_games"
        app:layout_constraintEnd_toEndOf="@+id/age_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/games_in_curse"
        app:layout_constraintTop_toBottomOf="@+id/age_title"
        app:layout_constraintVertical_bias="0.407" />

    <ImageView
        android:id="@+id/lvl_gamer_img"
        android:layout_width="179dp"
        android:layout_height="46dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_top_games"
        app:srcCompat="@drawable/lvl_background" />

    <ImageView
        android:id="@+id/lvl_gamer_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_gamer_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/lvl_gamer_img"
        app:layout_constraintTop_toTopOf="@+id/lvl_gamer_img"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/icon_lvl" />

    <TextView
        android:id="@+id/lvl_gamer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamer_level"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_gamer_img"
        app:layout_constraintEnd_toEndOf="@+id/lvl_gamer_img"
        app:layout_constraintStart_toEndOf="@+id/lvl_gamer_icon"
        app:layout_constraintTop_toTopOf="@+id/lvl_gamer_img" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_games"
        android:layout_width="410dp"
        android:layout_height="486dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl_gamer_img"
        tools:listitem="@layout/activity_holder_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>